# amalie_projects

./: .gitignore  .gitmodules  README.md  bump_version.py
.github/workflows/: docs.yml  publish-fastapi-todo.yml
csharp/: README.md
csharp/desktop-apps/wpf/: .gitignore  WpfInventoryApp.sln
csharp/desktop-apps/wpf/WpfInventoryApp/: AUTOMATION_REFERENCE.md  App.xaml  App.xaml.cs  README.md  WpfInventoryApp.csproj
csharp/desktop-apps/wpf/WpfInventoryApp.Tests/: WpfInventoryApp.Tests.csproj
csharp/desktop-apps/wpf/WpfInventoryApp.Tests/Repositories/: ProductRepositoryTests.cs
csharp/desktop-apps/wpf/WpfInventoryApp/Commands/: AsyncRelayCommand.cs  RelayCommand.cs
csharp/desktop-apps/wpf/WpfInventoryApp/Data/: InventoryDbContext.cs
csharp/desktop-apps/wpf/WpfInventoryApp/Models/: Product.cs
csharp/desktop-apps/wpf/WpfInventoryApp/Repositories/: IProductRepository.cs  ProductRepository.cs
csharp/desktop-apps/wpf/WpfInventoryApp/ViewModels/: MainViewModel.cs  ProductViewModel.cs  ViewModelBase.cs
csharp/desktop-apps/wpf/WpfInventoryApp/Views/: MainWindow.xaml  MainWindow.xaml.cs
frontend/: README.md
machine-learning/: README.md
machine-learning/learning_health_system_for_medical_imaging/: README.md  requirements.txt
machine-learning/learning_health_system_for_medical_imaging/data/raw/mimic-cxr/: .keep
machine-learning/learning_health_system_for_medical_imaging/docs/: README.md
machine-learning/learning_health_system_for_medical_imaging/notebooks/: example-notebook.ipynb
machine-learning/learning_health_system_for_medical_imaging/src/: README.md
machine-learning/learning_health_system_for_medical_imaging/src/ingestion/: download_mimic_cxr.py
machine-learning/learning_health_system_for_medical_imaging/src/preprocessing/: .keep
machine-learning/learning_health_system_for_medical_imaging/tests/: README.md
python/: README.md
python/automation-testing/wpf-inventory-app/: .gitignore  README.md  config.py  conftest.py  data_generator.py  debug_connection.py  debug_pytest.py  debug_simple.py  debug_uia_methods.py  example_usage.py  inspect_controls.py  inventory.db-shm  inventory.db-wal  pytest.ini  requirements.txt  run_tests.py  setup.py  test_automation_working.py  test_textbox_simple.py
python/automation-testing/wpf-inventory-app/tests/: __init__.py  test_basic_functionality.py  test_performance.py
python/web-frameworks/django/: LICENSE  README.md  setup.py
python/web-frameworks/django/src/todo_orchestrator/: manage.py
python/web-frameworks/django/src/todo_orchestrator/testing/: admin.py  apps.py  views.py
python/web-frameworks/django/src/todo_orchestrator/todo_orchestrator/: wsgi.py
python/web-frameworks/django/todo-display/: .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  start.sh
python/web-frameworks/django/todo-display/display/: apps.py  server_manager.py  urls.py  utils.py  views.py
python/web-frameworks/django/todo-display/display/management/commands/: clear_ports.py
python/web-frameworks/django/todo-display/display/templates/display/: base.html  todo_list.html
python/web-frameworks/django/todo-display/todo_display/: asgi.py  settings.py  urls.py  wsgi.py
python/web-frameworks/django/todo-orchestrator/: README.md  __init__.py  build.sh  pyproject.toml  render.yaml  requirements.txt  setup_script.py  start.sh
python/web-frameworks/django/todo-orchestrator/testing/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
python/web-frameworks/django/todo-orchestrator/testing/static/testing/css/: styles.css
python/web-frameworks/django/todo-orchestrator/testing/templates/testing/: api_test.html  base.html  dashboard.html  todo_management.html
python/web-frameworks/django/todo-orchestrator/todo_orchestrator/: settings.py  urls.py
python/web-frameworks/fastapi/: LICENSE  README.md  pyproject.toml  test_api.py
python/web-frameworks/fastapi/src/fastapi_todo_list/: config.py  crud.py  database.py  main.py
python/web-frameworks/fastapi/tests/: test_main.py
python/web-frameworks/fastapi/todo-api/: MANIFEST.in  README.md  build_package.py  bump_version.py  pyproject.toml
python/web-frameworks/fastapi/todo-api/src/fastapi_todo_list/: __init__.py  crud.py  main.py  schemas.py
shared/docs/sphinx-site/: .gitignore  Makefile  README.md  build-config.yml  docker-compose.yml  docs.py  generate_project_docs.py  pyproject.toml  requirements.txt  setup_external_docs.py
shared/docs/sphinx-site/source/: changelog.rst  conf.py  contributing.rst  index.rst
shared/docs/sphinx-site/source/_static/: custom-logo.js  custom.css
shared/docs/sphinx-site/source/about/: index.rst
shared/docs/sphinx-site/source/csharp/: index.md  index.rst
shared/docs/sphinx-site/source/docs/: adding-documentation.md  git-philosophy.md  index.md  index.rst  learning-paths.md  local-development.md  python-template-setup.md  regular_expression.md
shared/docs/sphinx-site/source/frontend/: index.md
shared/docs/sphinx-site/source/machine-learning/: index.md
shared/docs/sphinx-site/source/projects/: csharp.rst  csharp_console-apps.rst  csharp_desktop-apps.rst  csharp_desktop-apps_maui.rst  csharp_desktop-apps_winui.rst  csharp_desktop-apps_wpf.rst  csharp_desktop-apps_wpf_wpf_wpfinventoryapp.rst  csharp_shared-libraries.rst  csharp_web-development.rst  index.rst  python_automation-testing.rst  python_automation-testing_wpf_inventory_app.rst  python_web-frameworks.rst  python_web-frameworks_django.rst  python_web-frameworks_django_django_todo_display.rst  python_web-frameworks_django_django_todo_orchestrator.rst  python_web-frameworks_fastapi.rst  python_web-frameworks_fastapi_fastapi_todo_api.rst
shared/docs/sphinx-site/source/python/: automation-testing.md  django-todo-display.md  django-todo-orchestrator.md  fastapi-todo-service.md  index.md  web-frameworks.md
shared/docs/sphinx-site/source/setup/: index.rst
shared/docs/sphinx-site/source/templates/: python-package-template.yml
shared/scripts/: README.md  setup-python-env.ps1
shared/templates/: README.md  python-package-template.yml
(+5 files in other folders)
