[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amalie-development-portfolio-docs"
version = "1.0.0"
description = "Sphinx documentation site for Amalie's development portfolio and learning journey"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Amalie", email = "amalie@example.com"}
]
maintainers = [
    {name = "Amalie", email = "amalie@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
keywords = ["documentation", "sphinx", "portfolio", "learning", "development"]
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    "sphinx>=7.2.0,<8.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-tabs>=3.4.4",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

# Optional dependencies grouped by feature
[project.optional-dependencies]
# Theme alternatives
themes = [
    "sphinx-rtd-theme>=2.0.0",
]

# Enhanced features and extensions
enhanced = [
    "sphinx-togglebutton>=0.3.2",
    "sphinx-external-toc>=1.0.1",
    "sphinxcontrib-bibtex>=2.6.2",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-gallery>=0.15.0",
]

# Development and building tools
dev = [
    "sphinx-autobuild>=2021.3.14",
    "doc8>=1.1.1",
    "rstcheck>=6.2.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

# Quality and testing
quality = [
    "doc8>=1.1.1",
    "rstcheck>=6.2.0",
    "sphinx-lint>=0.6.0",
]

# All optional dependencies combined
all = [
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-togglebutton>=0.3.2", 
    "sphinx-external-toc>=1.0.1",
    "sphinxcontrib-bibtex>=2.6.2",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-gallery>=0.15.0",
    "sphinx-autobuild>=2021.3.14",
    "doc8>=1.1.1",
    "rstcheck>=6.2.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "sphinx-lint>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/amalie/amalie_projects"
Documentation = "https://amalie.github.io/amalie_projects"
Repository = "https://github.com/amalie/amalie_projects"
"Bug Reports" = "https://github.com/amalie/amalie_projects/issues"
"Source" = "https://github.com/amalie/amalie_projects"

[project.scripts]
# Build documentation
build-docs = "sphinx.cmd.build:main"

# Utility scripts for documentation management
[tool.setuptools]
packages = []  # No Python packages to install, this is a documentation project

[tool.setuptools.package-dir]
# Documentation source directory
"" = "source"

# Sphinx configuration
[tool.sphinx]
source-dir = "source"
build-dir = "build"
builder = "html"
nitpicky = true
warning-is-error = false

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Directories to exclude
    build/
  | dist/
  | \.eggs/
  | \.git/
  | \.venv/
  | venv/
  | env/
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["build/*", "dist/*"]

# Ruff linting configuration
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 10

# Documentation quality checking with doc8
[tool.doc8]
max-line-length = 88
ignore-path = [
    "build",
    "source/_build",
    "*.egg-info",
]
ignore = [
    "D001",  # Line too long
]
extensions = [".rst", ".md"]

# RST checking configuration  
[tool.rstcheck]
report_level = "info"
ignore_roles = [
    "py:class",
    "py:func", 
    "py:meth",
    "py:mod",
    "doc",
]
ignore_directives = [
    "automodule",
    "autoclass",
    "autofunction",
    "tabs",
    "tab",
    "code-block",
    "literalinclude",
    "toctree",
]
ignore_substitutions = [
    "release",
    "version",
]

# Coverage configuration (if needed for Python code in docs)
[tool.coverage.run]
source = ["source"]
omit = [
    "*/tests/*",
    "*/test_*",
    "build/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]