[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-api-orchestrator"
version = "1.0.0"
description = "Django-based testing orchestration tool for FastAPI Todo List API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Amalie Shi", email = "amalie.shi.jhmi@gmail.com"},
]
keywords = ["django", "fastapi", "testing", "orchestration", "todo", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Testing",
]

requires-python = ">=3.9"
dependencies = [
    "Django>=6.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "django-cors-headers>=4.3.0",
    "django-bootstrap5>=23.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
    "isort",
    "mypy",
]
# Dependencies for running the FastAPI Todo List server that this orchestrator manages
fastapi-server = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
"Homepage" = "https://github.com/amalieshi/amalie_projects"
"Bug Reports" = "https://github.com/amalieshi/amalie_projects/issues"
"Source" = "https://github.com/amalieshi/amalie_projects"

[project.scripts]
todo-orchestrator = "todo_orchestrator.wsgi:main"

[tool.setuptools.packages.find]
include = ["todo_orchestrator*", "testing*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true